external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_fields_keyword_field.move
module 0x42::M {
    // keyword instead of a type
    public struct Foo(fun)
}
